# FoldPDF

./: .gitignore  CONTEXT_MENU_README.md  EXE_DEPLOYMENT_GUIDE.md  GITHUB_CHECKLIST.md  GIT_COMMIT_GUIDE.md  LICENSE  OPTIMIZATION_REPORT.md  QUICKSTART.md  README.md  build_cli_exe.py  build_exe.bat  cli_convert.py  config.py  gen_icon.py  icon_data.py  install_context_menu.bat  logger.py  main.py  make_ico.py  pyproject.toml  rebuild.bat  register_context_menu.py  requirements.txt  ui_main.py  uninstall_context_menu.bat
